--- a/src/main/webapp/WEB-INF/locales/messages_en.properties
+++ b/src/main/webapp/WEB-INF/locales/messages_en.properties
@@ -1,4 +1,7 @@
 username=Username
+email.exist=The user with this email already exists
+email.pattern.error=The incorrect name of email
+email=Email
 current.password.is.wrong=The current password is wrong
 current.password=Current password
 new.password=New password
