--- a/src/main/webapp/WEB-INF/locales/messages_en.properties
+++ b/src/main/webapp/WEB-INF/locales/messages_en.properties
@@ -1,4 +1,13 @@
 username=Username
+name.of.group=Name of group
+number.of.tickets=Number of tickets
+city=City
+location=Location
+description=Description
+rock=Rock
+pop=Pop
+rap=Rap
+jazz=Jazz
 email.exist=The user with this email already exists
 email.pattern.error=The incorrect name of email
 email=Email
