--- a/src/main/webapp/WEB-INF/locales/messages_en.properties
+++ b/src/main/webapp/WEB-INF/locales/messages_en.properties
@@ -1,4 +1,10 @@
 username=Username
+price.pattern.error=Incorrectly entered price
+number.of.tickets.pattern.error=Incorrect entered number of tickets
+date.of.the.event.is.null=Date of the event is empty
+musi\u0441.genre.is.null=Music genre is empty
+date_time_of_event=Date and time of the event
+price=Price
 name.of.group=Name of group
 number.of.tickets=Number of tickets
 city=City
