--- a/src/main/webapp/WEB-INF/locales/messages_en.properties
+++ b/src/main/webapp/WEB-INF/locales/messages_en.properties
@@ -1,4 +1,10 @@
 username=Username
+unacceptable.number.of.tickets=Unacceptable number of tickets
+date.has.expired=The date has expired
+no.tickets=No tickets
+quantity=Quantity
+search.tickets=Search tickets
+music.genre=Music genre
 price.pattern.error=Incorrectly entered price
 number.of.tickets.pattern.error=Incorrect entered number of tickets
 date.of.the.event.is.null=Date of the event is empty
